syntax = "proto3";
option java_multiple_files = true;
//import "google/protobuf/timestamp.proto";

package com.parentmodule.common;


message ParentId {
  int64 parentId = 1;
}

message ParentResponse {
  int64 parentId = 1;
  string parentName = 2;
  string parentDescription = 3;
}

service ParentService {
  rpc getParentResponseById(ParentId) returns (ParentResponse);
}